# BezierCurves-OpenGL

Src/: CMakeLists.txt  main.cpp
